--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 <head>
-    <title>Rebex Tiny Web Server (free)</title>
+    <title>Damien's test server...</title>
 </head>
 <body>
-    <h1>Rebex Tiny Web Server</h1>
+    <h1>TEST TEST TEST</h1>
     <hr>
-    <p>Welcome to the free minimalist web server.</p>
+    <p>Welcome to the test web server.</p>
     <p><em>This page was generated.</em></p>
-    <p>For more info about the server and its configuration, please visit <a href='https://www.rebex.net/tiny-web-server/?utm_source=TinyWebServerApp&utm_medium=application&utm_content=MainScreenLink&utm_campaign=TinyWebServerAppLinks'>Rebex Tiny Web Server</a> home page.</p>
+    <p>This is 'hosted' on github.</p>
 
     <style type='text/css'>
         .embeddedServiceHelpButton .helpButton .uiButton {
